reverts back to Collections.singletonMap